--- a/styles/theme/browse-all.css
+++ b/styles/theme/browse-all.css
@@ -22,14 +22,16 @@
   }
 }
 
-/* Upcoming event variant */
+/* Events V2 variant */
 
-body.browse-all .browse-card.upcoming-event-card .browse-card-figure .event-series-banner-no-speakers {
+body.browse-all .browse-card.upcoming-event-card .browse-card-figure .event-series-banner-no-speakers,
+body.browse-all .browse-card.event-card .browse-card-figure .event-series-banner {
   font-size: var(--spectrum-font-size-700);
 }
 
 @media only screen and (min-width: 1440px) {
-  body.browse-all .browse-card.upcoming-event-card .browse-card-figure .event-series-banner-no-speakers {
+  body.browse-all .browse-card.upcoming-event-card .browse-card-figure .event-series-banner-no-speakers,
+  body.browse-all .browse-card.event-card .browse-card-figure .event-series-banner {
     font-size: 24px;
   }
 }
